<resources>
    <string name="app_name">Журнал тренера</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Зубрилин Сергей Алексеевич</string>
    <string name="nav_header_subtitle">Студент группы КИ18–06</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="btn_add_athletes">добавить спортсмена</string>

    <string name="tv_fio">ФИО</string>
    <string name="et_enter_fio">Введите фио</string>

    <string name="tv_phone_number">Номер телефона</string>
    <string name="et_enter_phone_number">Введите номер телефона</string>

    <string name="tv_bday">Дата рождения</string>
    <string name="et_enter_bday">Введите дату рождения</string>

    <string name="btn_create_new_athlete">Создать</string>

    <string name="menu_time_table">Расписание</string>
    <string name="menu_athletes">Спортсмены</string>
    <string name="athletes_aditor">Редактирование спортсмена</string>

    <string name="tv_training_description">Описание тренировки</string>
    <string name="tv_athletes_amount">Количесво спортсменов:</string>
    <string name="btn_add_time_table">добавить</string>
    <string name="training_details_info">Инфо</string>
    <string name="training_details_lessons">Тренировки</string>
    <string name="training_details_pay">Абонементы</string>

    <string name="menu_timer">Таймер</string>
    <string name="menu_statistic">Статистика</string>
    <string name="tv_statistic_fast_find">Быстрый выбор периода:</string>
    <string name="tv_statistic_period">Период:</string>
    <string name="tv_statistic_training_count">Количество тренировок:</string>
    <string name="tv_statistic_max_athletes_count">Макс. количество спортсменов:</string>
    <string name="tv_statistic_sum">Общая сумма:</string>
    <string name="tv_athleteINFO_sub_buydate">Дата приобретения:</string>
    <string name="tv_athleteINFO_sub_training_payed">Оплачено тренировок:</string>
    <string name="tv_athleteINFO_sub_price">Цена:</string>
    <string name="btn_athleteINFO_sub_add_sub">Добавить абонемент</string>
    <string name="btn_delete_athlete">Удалить</string>
    <string name="btn_update_time_table">Изменить</string>
    <string name="btn_delete_timetable">Удалить</string>
</resources>