<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_time_table"
            android:icon="@drawable/timetable"
            android:title="@string/menu_time_table" />
        <item
            android:id="@+id/nav_athletes"
            android:icon="@drawable/athlete"
            android:title="@string/menu_athletes" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/statistic"
            android:title="@string/menu_statistic" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/timer"
            android:title="@string/menu_timer"/>
    </group>
</menu>