<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.athletes.athlete_create_athlete.AddAthletesActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_fio"
        android:textSize="20dp"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/et_enter_fio" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_phone_number"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="phone"
        android:hint="@string/et_enter_phone_number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_bday"
        android:textSize="20dp" />


    <EditText
        android:singleLine="true"
        android:id="@+id/etBDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/et_enter_bday"
        android:inputType="date"
        />

    <Button
        android:id="@+id/btnCreateNewAthlete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:text="@string/btn_create_new_athlete"
        android:textSize="15sp"/>


</LinearLayout>