<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_time_table">

    <fragment
        android:id="@+id/nav_time_table"
        android:name="com.sjproject.coach_log_new.ui.timetable.timetable_main.TimeTableFragment"
        android:label="@string/menu_time_table"
        tools:layout="@layout/fragment_time_table" />

    <fragment
        android:id="@+id/nav_athletes"
        android:name="com.sjproject.coach_log_new.ui.athletes.athlete_main.AthletesFragment"
        android:label="@string/menu_athletes"
        tools:layout="@layout/fragment_athletes" />

    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.sjproject.coach_log_new.ui.statistic.StatisticFragment"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/nav_timer"
        android:name="com.sjproject.coach_log_new.ui.sport_timer.TimerFragment"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_timer" />

</navigation>