<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.athletes.athlete_info.AthleteINFOFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_fio"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_athleteInfo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="NO NAME"
        android:textColor="@color/cardview_dark_background"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_phone_number"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/tv_athleteInfo_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="NO NUMBER"
        android:textColor="@color/cardview_dark_background"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_bday"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_athleteInfo_bday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="NO B-DAY"
        android:textColor="@color/cardview_dark_background"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_delete_athlete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/btn_delete_athlete"
        android:textColor="@color/white" />

</LinearLayout>