<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.statistic.StatisticFragment">

    <TextView
        android:id="@+id/tv_fast_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_statistic_fast_find"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_fast_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fast_find">

        <Button
            android:id="@+id/btn_start_month"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="пред. месяц"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_finish_month"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="след. месяц"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_statistic_period"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_fast_find" />

    <LinearLayout
        android:id="@+id/ll_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_period">

        <Button
            android:id="@+id/btn_start_period"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="-"
            android:textSize="30sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_finish_period"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_training_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/tv_statistic_training_count"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_period" />

    <TextView
        android:id="@+id/tv_training_count_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_period" />

    <View
        android:id="@+id/line_training_count"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_training_count"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_max_athletes_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:text="@string/tv_statistic_max_athletes_count"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_training_count" />

    <TextView
        android:id="@+id/tv_max_athletes_count_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_training_count" />

    <View
        android:id="@+id/line_max_athletes_count"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_max_athletes_count"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:text="@string/tv_statistic_sum"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_max_athletes_count" />

    <TextView
        android:id="@+id/tv_sum_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_max_athletes_count" />

    <View
        android:id="@+id/line_sum"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sum"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>